--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 	<!-- <script src="santas-instructions.js" ></script> -->
-	<script src="js/bundle.js"></script>
+	<script src="bundle.js"></script>
 
 	
 </body>
